JOC-2206  - changed to use automatic UTC timestamp: inventory